[tool.poetry]
name = "comp-vision"
version = "0.1.0"
description = "Project with microservices"
authors = ["Razermel <amir05mustafaev05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
